# PyTorrent

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/pytorrent/: __init__.py  __main__.py  block.py  main.py  message.py  peer.py  peers_manager.py  piece.py  pieces_manager.py  torrent.py  tracker.py
tests/: test_basic.py
tests/fixtures/: test.torrent
